--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Prof. Rodolfo Araujo</title>
+	<title>Vitor Duarte</title>
 </head>
 <body>
 	<style>
@@ -11,8 +11,8 @@
 			width: 10vw;
 			height: 10vw;
 			margin-left: 43vw;
-			border: 20px solid lightgray;
-			border-top: 20px solid green;
+			border: 20px solid black;
+			border-top: 20px solid red;
 			border-radius: 100%;
 			animation: load 1s linear infinite;
 		}
